# MATS

./: README.md  feature_validation.py  generalization.py  neuronpedia.py  prompts.py  pyproject.toml  systematic_test.py  test.py
frontend/: app.py
frontend/templates/: error.html  index.html  run.html  run_stress.html
logs/misconceptions/: run_20251220_171745.txt  run_20251220_210041.txt  run_20251220_210612.txt  run_20251220_210826.txt  run_20251220_211229.txt  run_20251220_211500.txt  run_20251220_212456.txt  run_20251220_212814.txt  run_20251220_213125.txt  run_20251220_213556.txt  run_20251220_213952.txt  run_20251220_215026.txt  run_20251221_161357.txt  run_20251221_164820.txt
runs/misconceptions/: best_examples.csv  fake_concepts.csv  fake_people.csv  fake_places.csv  fictional_as_real.csv  future_events.csv  myths_no_effect.csv  run_10441L9_59115L20.csv  run_20251221_164820.csv
runs/stress_test/: stress_run_10441L9_59115L20.csv  stress_run_10441L9_med.csv  stress_run_122482L9_80603L20.csv  stress_run_122482L9_med.csv  stress_run_802169L9_med.csv  stress_run_80216L9_107788L20.csv
